--- a/public/assets/views/hmo/organization.html
+++ b/public/assets/views/hmo/organization.html
@@ -1,7 +1,9 @@
 <!-- start: BREADCRUMB -->
 <div class="breadcrumb-wrapper">
 	<h4 class="mainTitle no-margin"><strong><span class="text-super-large text-muted">{{ orgCtrl.org.name }} Profile</span></strong></h4><small><span class="label label-danger"><small>organization</small></span>
-	</small>
+	<a href="/#/partners/dashboard/clients/home" class="pull-right">Home</a>
+
+</small>
 
 	<div ncy-breadcrumb class="pull-right"></div>
 </div>
