--- a/public/assets/views/hmo/clients-partials/home/client-service.html
+++ b/public/assets/views/hmo/clients-partials/home/client-service.html
@@ -10,8 +10,41 @@
 								<i class="fa fa-user"></i> Refferral Code List
 							</uib-tab-heading>
 							<div class="row">
-								<div class="col-sm-12">
-
+								<div class="col-md-12">
+									<div class="panel panel-white">
+										<div class="panel-heading border-light">
+											<h4 class="panel-title text-primary text-bold">
+												Treated Enrollees
+											</h4>
+											<select name="month"  class="pull-right" style="margin-top: -18px"   ng-model="dashboardCtrl.current_month">
+												<option value="{{month}}" ng-repeat="month in months">{{month}}</option>
+											</select>
+										</div>
+										<div class="panel-body">
+											<table class="table table-striped table-hover" id="sample-table-3" ng-if="dashboardCtrl.codes.length > 0">
+												<thead>
+												<tr>
+													<th class="hidden-xs center">Referral Code</th>
+													<th class="center">Enrollee</th>
+													<th class="center">Organization</th>
+													<th class="center">Issued By</th>
+													<th class="center">Hospital</th>
+													<th class="center">Date</th>
+												</tr>
+												</thead>
+												<tbody>
+												<tr ng-repeat="record in dashboardCtrl.codes"  ng-click="dashboardCtrl.showEnrolleeClaim(record.enrollee_id)" style="cursor: pointer;">
+													<td class="text-bold center">{{ record.referral_code }}</td>
+													<td class="center"> {{ record.enrollee_name }}</td>
+													<td class="center">{{ record.organization }}</td>
+													<td class="center">Nasir, Boldert</td>
+													<td class="center">{{ record.hospital_name}}</td>
+													<td class="center">{{ record.date }}</td>
+												</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
 								</div>
 							</div>
 						</uib-tab>
