--- a/public/assets/views/hmo/enrollee.html
+++ b/public/assets/views/hmo/enrollee.html
@@ -2,6 +2,7 @@
 <div class="breadcrumb-wrapper">
     <h4 class="mainTitle no-margin"><strong><span class="text-super-large text-muted">{{enrolleeCtrl.enrollee.first_name}}, {{enrolleeCtrl.enrollee.last_name}}'s Profile</span></strong></h4>
     <span class="mainDescription text-azure">Enrollee</span>
+    <a href="/#/partners/dashboard/clients/home" class="pull-right">Home</a>
 </div>
 <!-- end: BREADCRUMB -->
 <!-- start: USER PROFILE -->
@@ -31,18 +32,9 @@
                     </uib-tab>
                     <!-- end: TAB PROJECTS -->
 
-                    <uib-tab heading="Activity Log" ng-if="currentUser.data.role.data.name == 'admin'">
+                    <uib-tab heading="Activity Log">
                         <ng-include src=" 'assets/views/hmo/clients-partials/enrollee/activity-log.html' "></ng-include>
                     </uib-tab>
-
-                    <uib-tab heading="Premiums">
-                        <ng-include src=" 'assets/views/hmo/clients-partials/enrollee/premiums.html' "></ng-include>
-                    </uib-tab>
-
-                    <uib-tab heading="Edit Medical Records" ng-if="currentUser.data.role.data.name == 'claims'">
-                        <ng-include src=" 'assets/views/hmo/clients-partials/enrollee/claims-medical-history.html' "></ng-include>
-                    </uib-tab>
-
                 </uib-tabset>
                 <!-- end: USER TABSET -->
             </div>
