--- a/public/assets/views/hmo/clients.html
+++ b/public/assets/views/hmo/clients.html
@@ -27,7 +27,7 @@
                                         </div>
                                         <treasure-overlay-spinner active='spinner.active'>
                                             <div class="panel-body">
-                                                <table class="table table-striped table-hover" id="sample-table-3">
+                                                <table class="table table-striped table-hover" id="sample-table-3" ng-table="hmoClient.tableParams">
                                                     <thead>
                                                     <tr>
                                                         <th class="hidden-xs">Image</th>
@@ -39,14 +39,14 @@
                                                     </tr>
                                                     </thead>
                                                     <tbody>
-                                                    <tr ng-repeat="enrollee in hmoClient.enrollees" on-last-repeat ng-click="hmoClient.showEnrollee(enrollee.enrollee_id)" style="cursor: pointer;">
-                                                        <td class="center" >
+                                                    <tr ng-repeat="enrollee in $data" on-last-repeat  >
+                                                        <td class="center" ng-click="hmoClient.showEnrollee(enrollee.enrollee_id)" style="cursor: pointer;" >
                                                             <img src="{{ enrollee.image_url}}" class="img-rounded" alt="image" height="50px" ng-if="hmoClient.checkForNull(enrollee.image_url)"/>
                                                             <img src="{{ enrollee.sex == 'Male' ? 'assets/images/backbone/businessman.svg' : 'assets/images/backbone/businesswoman.svg'}}" class="img-rounded" alt="image" height="50px" ng-if="!hmoClient.checkForNull(enrollee.image_url)"/>
                                                         </td>
                                                         <td class="hidden-xs">{{enrollee.generated_id}}</td>
                                                         <td class="hidden-xs">{{ enrollee.first_name }}, {{ enrollee.last_name }}</td>
-                                                        <td class="hidden-xs"><a href="#" rel="nofollow" target="_blank"> {{ enrollee.email }} </a></td>
+                                                        <td class="hidden-xs" ng-click="hmoClient.showEnrollee(enrollee.enrollee_id)" style="cursor: pointer;"><a href="#" rel="nofollow" target="_blank"> {{ enrollee.email }} </a></td>
                                                         <td class="hidden-xs">{{enrollee.plan_name}}</td>
                                                         <td class="hidden-xs center">
                                                             <span class="label label-success" ng-show="{{enrollee.status}}">active</span>
@@ -65,10 +65,10 @@
                                                                     </button>
                                                                     <ul class="dropdown-menu pull-right dropdown-light" role="menu">
                                                                         <li>
-                                                                            <a href="#"> Byes </a>
+                                                                            <a href="/#/partners/dashboard/clients/enrollee/{{enrollee.enrollee_id}}?tabIndex=1" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Edit"><i class="fa fa-pencil"></i></a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#"> Remove </a>
+                                                                            <a href="#" class="btn btn-transparent btn-xs tooltips" ng-click="delete(enrollee.email, enrollee.enrollee_id)" tooltip-placement="top" uib-tooltip="Remove"><i class="fa fa-times fa fa-white"></i></a>
                                                                         </li>
                                                                     </ul>
                                                                 </div>
