--- a/public/assets/views/hmo/clients-partials/enrollee/claims.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/claims.html
@@ -93,13 +93,11 @@
 									<div class="panel panel-white">
 										<div class="panel-heading border-light">
 											<h4 class="panel-title text-bold">Claims Information</h4>
-											<select name="month" id="" class="pull-right" style="margin-top: -18px" ng-if="enrolleeCtrl.enrolleeClaimsRecords.length > 0">
-												<option value="{}" ng-repeat="month in months">{{month}}</option>
-											</select>
+											<select name="month" class="pull-right" style="margin-top: -18px" ng-options="o for o in months track by o" ng-model="enrolleeCtrl.currentMonthClaims" ng-change="getMedicalRecords('claims')"></select>
 										</div>
 										<div uib-collapse="activities" class="panel-wrapper">
 											<div class="panel-body">
-												<h2 ng-if="enrolleeCtrl.enrolleeClaimsRecords.length < 1">This enrollee has no Medical Records yet</h2>
+												<h3  class="text-bold" ng-if="enrolleeCtrl.enrolleeClaimsRecords.length < 1">This enrollee has no Claims Records for the month of  {{ enrolleeCtrl.currentMonthClaims }}</h3>
 												<table class="table table-striped table-hover" id="sample-table-3" ng-if="enrolleeCtrl.enrolleeClaimsRecords.length > 0">
 													<thead>
 														<tr>
@@ -107,7 +105,6 @@
 															<th class="center">Hospital</th>
 															<th class="center">Procedure</th>
 															<th class="center">Month</th>
-															<th class="center">action</th>
 														</tr>
 													</thead>
 													<tbody>
@@ -116,11 +113,6 @@
 															<td class="center"> {{ record.hospital_name }}</td>
 															<td class="center">{{ record.procedure }}</td>
 															<td class="center">{{ record.month }}</td>
-															<td class="center">
-                                                            <div class="visible-md visible-lg hidden-sm hidden-xs">
-                                                                <a href="#" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Edit" ng-click="enrolleeCtrl.editMedicalRecord(record.id)"><i class="fa fa-pencil"></i></a>
-                                                                </a>
-                                                            </div>
 														</tr>
 													</tbody>
 												</table>
@@ -134,12 +126,10 @@
 									<div class="panel panel-white">
 										<div class="panel-heading border-light">
 											<h4 class="panel-title text-bold">Health Information</h4>
-											<select name="month" id="" class="pull-right" style="margin-top: -18px" ng-if="enrolleeCtrl.enrolleeHealthRecords.length > 0">
-												<option value="{}" ng-repeat="month in months">{{month}}</option>
-											</select>										</div>
+											<select name="month" ng-change="getMedicalRecords('health')" class="pull-right" style="margin-top: -18px" ng-options="o for o in months track by o" ng-model="enrolleeCtrl.currentMonthHealth"></select>										</div>
 										<div uib-collapse="activities" class="panel-wrapper">
 											<div class="panel-body">
-												<h2 ng-if="enrolleeCtrl.enrolleeHealthRecords.length < 1">This enrollee has no Health Records yet</h2>
+												<h3  class="text-bold" ng-if="enrolleeCtrl.enrolleeHealthRecords.length < 1">This enrollee has no Health Records for the month of {{ enrolleeCtrl.currentMonthHealth }}</h3>
 												<table class="table table-striped table-hover" id="sample-table-3" ng-if="enrolleeCtrl.enrolleeHealthRecords.length > 0">
 													<thead>
 													<tr>
